--- a/ui/customer/incidents.html
+++ b/ui/customer/incidents.html
@@ -16,7 +16,7 @@
 <html lang="en" data-theme="light">
 <head>
 <meta charset="UTF-8"/>
-<title>US Signal | Incident Intelligence Customer 4.0</title>
+<title>US Signal | Incident Intelligence</title>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
 <style>
@@ -488,7 +488,7 @@ canvas{ width:100%; height:240px; display:block; }
     </div>
 
     <div class="muted" style="font-weight:900;">
-      Incident Intelligence — Customer 4.0
+      Incident Intelligence
     </div>
   </div>
 </div>
@@ -647,7 +647,7 @@ canvas{ width:100%; height:240px; display:block; }
   <div class="card">
     <div class="sectionTitle">
       <h2>Notifications</h2>
-      <div class="hint">Get notified about new incidents (best-effort without worker changes)</div>
+      <div class="hint">Get notified about new incidents (best-effort)</div>
     </div>
 
     <div class="row" style="margin-bottom:10px;">
@@ -684,8 +684,8 @@ canvas{ width:100%; height:240px; display:block; }
     </div>
 
     <div class="muted" style="font-weight:900;">
-      Notes: If your worker later implements an email subscription endpoint, this UI will automatically use it.
-      Until then, notifications are “in-session” (while the page is open) and can optionally trigger your existing email workflow if an endpoint exists.
+      Notes: If you later implement an email subscription endpoint, this UI will automatically use it.
+      Until then, notifications are “in-session” (while the page is open) and can optionally trigger your existing email workflow if an endpoint exists. Ask your Account Manager for automated notification.
     </div>
   </div>
 
