--- a/ui/customer/incidents.html
+++ b/ui/customer/incidents.html
@@ -501,7 +501,7 @@ canvas{ width:100%; height:240px; display:block; }
   <!-- HEADER -->
   <div class="header-card">
     <div class="header-left">
-      <div class="h">Webex — Incident Intelligence (Customer 4.0)</div>
+      <div class="h">Webex — Incident Intelligence</div>
       <div class="sub" id="whoLine">Loading…</div>
       <div class="sub" id="execNarrative" style="font-weight:900; margin-top:6px;">—</div>
     </div>
